src/objects/POC__c.object
<CustomObject>
    <description>This contains the POC weekly data provided by Sub Management team</description>
    <fields>
        <fullName>Address_Line_5__c</fullName>
        <description>This is not shown and is concatonated to State field</description>
        <label>Address Line 5</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Digital_Monthly_Price__c</fullName>
        <label>Digital Monthly Price</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Digital_Yearly_Price__c</fullName>
        <label>Digital Yearly Price</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Capture customer email for digital acquisition e.g. Website, Tablet products</description>
        <inlineHelpText>Customers interested in digital products should provide email address</inlineHelpText>
        <label>Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExpiryDate__c</fullName>
        <description>Date that the POC offer expires</description>
        <label>ExpiryDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <label>FirstName</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HiddenPOCPrice__c</fullName>
        <description>The data entered is in the form of text ie: £4.23, with the £. So need to enter the data in as text and then in the trigger remove £ and enter in the decimal field POC_Price__c</description>
        <label>HiddenPOCPrice</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HomeTelephone__c</fullName>
        <label>HomeTelephone</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Household_ID__c</fullName>
        <description>Unique Idenitfier for CACI Household</description>
        <label>Household_ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Individual_ID__c</fullName>
        <description>Unique identifier for CACI individual</description>
        <label>Individual_ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <label>LastName</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ListReference__c</fullName>
        <label>ListReference</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MobileTelephone__c</fullName>
        <label>MobileTelephone</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderTakenWave__c</fullName>
        <label>OrderTakenWave</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POC_ID__c</fullName>
        <description>The POC unique identifier code</description>
        <label>POC_ID</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POC_Price__c</fullName>
        <label>Premium Weekly Price</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PostalCode__c</fullName>
        <description>POC and post code are minimum details used to sign in so both are required</description>
        <label>PostalCode</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrefPrintProduct__c</fullName>
        <label>Preferred Print Product</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>zqu__ZProduct__c</referenceTo>
        <relationshipLabel>POCs</relationshipLabel>
        <relationshipName>POCs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Special_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Special Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address_Line_2__c</fullName>
        <description>This field is not shown at front end and is concatonated to Street field</description>
        <label>Street Address Line 2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Subscriber_Number__c</fullName>
        <label>Subscriber Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription_Acquired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Subscription Acquired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TABAnnualPrice__c</fullName>
        <description>This field is for Synthesis ( Bill Rule) to store price in POC</description>
        <label>TABAnnualPrice</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TABMonthlyPrice__c</fullName>
        <description>This field is for Synthesis(Bill Rule) to store POC price</description>
        <label>TABMonthlyPrice</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TCodeManagement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TCodeManagement</label>
        <referenceTo>TCodeManagement__c</referenceTo>
        <relationshipLabel>POCs</relationshipLabel>
        <relationshipName>POCs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TMG_Engagement_Score__c</fullName>
        <label>TMG Engagement Score</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TMG_Model_Score__c</fullName>
        <label>TMG Model Score</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WEBAnnualPrice__c</fullName>
        <description>This field is for Synthesis ( Bill Rule) to store POC price</description>
        <label>WEBAnnualPrice</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WEBMonthlyPrice__c</fullName>
        <description>This field is for Synthesis(Bill Rule) to store POC price</description>
        <label>WEBMonthlyPrice</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WeekNumber__c</fullName>
        <description>Week Number (used to segment data)</description>
        <label>WeekNumber</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WorkTelehone__c</fullName>
        <label>WorkTelehone</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>title__c</fullName>
        <label>title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>POC</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>POC_ID__c</columns>
        <columns>PostalCode__c</columns>
        <columns>FirstName__c</columns>
        <columns>LastName__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>TCodeManagement__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>created_last_7_days</fullName>
        <columns>NAME</columns>
        <columns>ExpiryDate__c</columns>
        <columns>FirstName__c</columns>
        <columns>LastName__c</columns>
        <columns>POC_ID__c</columns>
        <columns>PostalCode__c</columns>
        <columns>Address_Line_5__c</columns>
        <columns>City__c</columns>
        <columns>Country__c</columns>
        <columns>State__c</columns>
        <columns>Street__c</columns>
        <columns>Street_Address_Line_2__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <label>created last 7 days</label>
    </listViews>
    <listViews>
        <fullName>created_today</fullName>
        <columns>NAME</columns>
        <columns>FirstName__c</columns>
        <columns>LastName__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>created today</label>
    </listViews>
    <nameField>
        <label>POC Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>POCs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Tcode_is_required</fullName>
        <active>true</active>
        <description>Tcode is required</description>
        <errorConditionFormula>TCodeManagement__c == null</errorConditionFormula>
        <errorMessage>Tcode is required</errorMessage>
    </validationRules>
</CustomObject>